# GNC_Learning

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
01_/: Classical control.md  LQR.slx  LQR_K.m  PID.slx
01_/inverted_pendulum/: CMakeLists.txt
01_/inverted_pendulum/data/: run.csv
01_/inverted_pendulum/include/: cascade_pid.hpp  controllers.hpp  observers.hpp  pendulum_ekf_model.hpp  plant_linear.hpp
01_/inverted_pendulum/src/: ekf.cpp  main.cpp  pendulum_ekf_model.cpp
01_/matlab/: LQR.slx  LQR_K.m
01_/note/: EKF.md
01_InventedPendulum/inverted_pendulum/include/: ekf.hpp  integrators.hpp  pid.hpp  saturations.hpp
01_InventedPendulum/inverted_pendulum/src/: logger.cpp  pendulum_dynamics.cpp
01_InventedPendulum/matlab/: ADBD.m
01_InventedPendulum/note/: EKF.md
01_InventendPendulum/inverted_pendulum/include/: linear_discrete_model.hpp  logger.hpp  pendulum_dynamics.hpp  pendulum_params.hpp  rate_limiter.hpp
01_InventendPendulum/inverted_pendulum/src/: main.cpp
01_InventendPendulum/matlab/: pulse.m
02_UAV/RotationR&R/: CmakeLists.txt
02_UAV/RotationR&R/include/: cascade_controller.hpp  dynamics.hpp  geom_att_controller.hpp  kinematics.hpp  lie.hpp  motor_model.hpp  pid.hpp  quad_mixer.hpp  rotation.hpp  validation.hpp
02_UAV/RotationR&R/src/: cascade_controller.cpp  dynamics.cpp  geom_att_controller.cpp  kinematics.cpp  lie.cpp  main.cpp  motor_model.cpp  pid.cpp  quad_mixer.cpp  rotation.cpp  validation.cpp
02_UAV/note/: 1_RotationRepresentation&Matrix.md  2_Kinematics.md  3_RigidBodyCredibility.md  4_MotorMixer.md  5_CascadePID.md  6_SE(3)GeometricControl.md
02_UAV/note/visual/: AngleVelVector.html  CouplingOfAxes(GimbalLock).html  GyroscopicMoment.html  (+3 more)
